[package]
name = "rhythm_proto"
version = "0.1.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
flexbuffers = "0.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14" }
sled = "0.34.6"
