[package]
name = "rhythm_prx"
version = "0.1.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhythm_proto = {path = "../rhythm_proto"}
hyper = { version = "0.14", features = ["http1", "http2", "server"]}
tokio = { version = "1.0", default-features = false, features = ["net", "macros", "rt", "sync", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await"]}
http = "0.2.3"

#serde_json = "^1.0.39"
regex = "^1.1.7"
#for proxy
native-tls = "0.2"  # for HTTPS acceptor
tokio-native-tls = "0.3"  # for HTTPS acceptor
rcgen = { version = "0.9", features = ["x509-parser"]}
time = "0.3"
#picky # custom cert gen
#easy_ssl # openssl cert gen
p12 = "0.6"

#for uplink
hyper-tls = "0.5"  # for HTTPS connector
tokio-socks = "0.5"
hyper-timeout = "0.4"
#for server
hyper-staticfile = "0.8"
tokio-util = { version = "0.6", features=["codec"] }
websocket-codec = "0.5"
websocket-lite = "0.5"
serde_urlencoded = "0.7"
#percent-encoding = "2.1"
#cookie_crate = { version = "0.14", package = "cookie", optional = true }
#cookie_store = { version = "0.12", optional = true }
#async-compression = { version = "0.3.0", default-features = false, features = ["stream", "gzip", "brotli"], optional = true }


#cookie
#qstring
#formdata
#encoding_rs

#plugins:
#wasmer = "1.0"
#wasmer-wasi = "1.0"

#database:
sled = "0.34.6"
flexbuffers = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
#no_proto = "0.1.2"
#ledb
#cask
#sonic-client
#shortcut
#retriever
#icbiadb
#structsy
pretty_env_logger = "0.4.0"
log = "0.4"
